--- a/refs.bib
+++ b/refs.bib
@@ -1,51 +1,35 @@
-
 @inproceedings{ZhZh21,
-  author    = {Xiaotian Zhou and
-               Zhongzhi Zhang},
-  title     = {Maximizing Influence of Leaders in Social Networks},
-  booktitle = {{KDD} '21: The 27th {ACM} {SIGKDD} Conference on Knowledge Discovery
-               and Data Mining, Virtual Event, Singapore, August 14-18, 2021},
+  title     = {Maximizing influence of leaders in social networks},
+  author    = {Zhou, Xiaotian and Zhang, Zhongzhi},
+  booktitle = {Proceedings of the 27th ACM SIGKDD Conference on Knowledge Discovery \& Data Mining},
   pages     = {2400--2408},
-  publisher = {{ACM}},
-  year      = {2021},
-  url       = {https://doi.org/10.1145/3447548.3467229},
-  doi       = {10.1145/3447548.3467229}
+  year      = {2021}
 }
+
 @inproceedings{ZhXuZh20,
-  author    = {Zuobai Zhang and
-               Wanyue Xu and
-               Zhongzhi Zhang},
-  title     = {Nearly Linear Time Algorithm for Mean Hitting Times of Random Walks
-               on a Graph},
-  booktitle = {{WSDM} '20: The Thirteenth {ACM} International Conference on Web Search
-               and Data Mining, Houston, TX, USA, February 3-7, 2020},
+  title     = {Nearly linear time algorithm for mean hitting times of random walks on a graph},
+  author    = {Zhang, Zuobai and Xu, Wanyue and Zhang, Zhongzhi},
+  booktitle = {Proceedings of the 13th International Conference on Web Search and Data Mining},
   pages     = {726--734},
-  publisher = {{ACM}},
-  year      = {2020},
-  url       = {https://doi.org/10.1145/3336191.3371777},
-  doi       = {10.1145/3336191.3371777}
+  year      = {2020}
 }
+
 @inproceedings{LiPeShYiZh19,
-  author    = {Huan Li and
-               Richard Peng and
-               Liren Shan and
-               Yuhao Yi and
-               Zhongzhi Zhang},
-  title     = {Current Flow Group Closeness Centrality for Complex Networks?},
-  booktitle = {The World Wide Web Conference, {WWW} 2019, San Francisco, CA, USA,
-               May 13-17, 2019},
-  pages     = {961--971},
-  publisher = {{ACM}},
-  year      = {2019},
-  url       = {https://doi.org/10.1145/3308558.3313490},
-  doi       = {10.1145/3308558.3313490}
+  title        = {Current flow group closeness centrality for complex networks},
+  author       = {Li, Huan and Peng, Richard and Shan, Liren and Yi, Yuhao and Zhang, Zhongzhi},
+  booktitle    = {Proceedings of the 2019 World Wide Web Conference},
+  pages        = {961--971},
+  year         = {2019},
+  organization = {ACM}
 }
+
 @book{KeSn76,
   title     = {Finite Markov Chains},
   author    = {Kemeny, John G and Snell, James Laurie},
   year      = 1976,
   publisher = {Springer, New York}
 }
+
 @article{NeWoFi78,
   author  = {George L. Nemhauser and
              Laurence A. Wolsey and
@@ -57,48 +41,38 @@
   number  = {1},
   pages   = {265--294},
   year    = {1978},
-  url     = {https://doi.org/10.1007/BF01588971},
   doi     = {10.1007/BF01588971}
 }
+
 @article{JoLi84,
-  title   = {Extensions of Lipschitz mappings into a Hilbert space},
+  title   = {{Extensions of Lipschitz mappings into a Hilbert space}},
   author  = {Johnson, William B and Lindenstrauss, Joram},
-  journal = {Contemporary Mathematics},
+  journal = {Contemp. Math.},
   volume  = {26},
   pages   = {189-206},
   year    = {1984}
 }
+
 @inproceedings{CoKyMiPaPeRaSu14,
-  author    = {Michael B. Cohen and
-               Rasmus Kyng and
-               Gary L. Miller and
-               Jakub W. Pachocki and
-               Richard Peng and
-               Anup B. Rao and
-               Shen Chen Xu},
-  title     = {Solving {SDD} linear systems in nearly \emph{m}log\({}^{\mbox{1/2}}\)\emph{n}
-               time},
-  booktitle = {Symposium on Theory of Computing, {STOC} 2014, New York, NY, USA,
-               May 31 - June 03, 2014},
-  pages     = {343--352},
-  publisher = {{ACM}},
-  year      = {2014},
-  url       = {https://doi.org/10.1145/2591796.2591833},
-  doi       = {10.1145/2591796.2591833}
+  title        = {Solving {SDD} linear systems in nearly $m \log^{1/2} n$ time},
+  author       = {Cohen, Michael B and Kyng, Rasmus and Miller, Gary L and Pachocki, Jakub W and Peng, Richard and Rao, Anup B and Xu, Shen Chen},
+  booktitle    = {Proc. 46th Ann. ACM Symp. Theory Comput.},
+  pages        = {343--352},
+  year         = {2014},
+  organization = {ACM}
 }
+
 @article{SpTe14,
-  author  = {Daniel A. Spielman and
-             Shang{-}Hua Teng},
-  title   = {Nearly Linear Time Algorithms for Preconditioning and Solving Symmetric,
-             Diagonally Dominant Linear Systems},
-  journal = {{SIAM} J. Matrix Anal. Appl.},
-  volume  = {35},
-  number  = {3},
-  pages   = {835--885},
-  year    = {2014},
-  url     = {https://doi.org/10.1137/090771430},
-  doi     = {10.1137/090771430}
+  title     = {Nearly linear time algorithms for preconditioning and solving symmetric, diagonally dominant linear systems},
+  author    = {Spielman, Daniel A and Teng, Shang-Hua},
+  journal   = {SIAM J. Matrix Anal. Appl.},
+  volume    = {35},
+  number    = {3},
+  pages     = {835--885},
+  year      = {2014},
+  publisher = {SIAM}
 }
+
 @inproceedings{Ku13,
   title     = {{KONECT} -- {The} {Koblenz} {Network} {Collection}},
   author    = {J\'{e}r\^{o}me Kunegis},
@@ -107,6 +81,7 @@
   pages     = {1343--1350},
   url       = {http://dl.acm.org/citation.cfm?id=2488173}
 }
+
 @misc{LeKr14,
   author       = {Jure Leskovec and Andrej Krevl},
   title        = {{SNAP Datasets}: {Stanford} Large Network Dataset Collection},
@@ -116,19 +91,14 @@
 }
 
 @inproceedings{YiGuWeTiHa10,
-  author    = {Zhijun Yin and
-               Manish Gupta and
-               Tim Weninger and
-               Jiawei Han},
-  title     = {A Unified Framework for Link Recommendation Using Random Walks},
-  booktitle = {International Conference on Advances in Social Networks Analysis and
-               Mining, {ASONAM} 2010, Odense, Denmark, August 9-11, 2010},
-  pages     = {152--159},
-  publisher = {{IEEE} Computer Society},
-  year      = {2010},
-  url       = {https://doi.org/10.1109/ASONAM.2010.27},
-  doi       = {10.1109/ASONAM.2010.27}
+  title        = {A unified framework for link recommendation using random walks},
+  author       = {Yin, Zhijun and Gupta, Manish and Weninger, Tim and Han, Jiawei},
+  booktitle    = {2010 international conference on advances in social networks analysis and mining},
+  pages        = {152--159},
+  year         = {2010},
+  organization = {IEEE}
 }
+
 @article{HuWaYeChLa16,
   author  = {Kai{-}Lung Hua and
              Hong{-}Cyuan Wang and
@@ -141,54 +111,36 @@
   number  = {1},
   pages   = {423--435},
   year    = {2018},
-  url     = {https://doi.org/10.1109/TCYB.2016.2640288},
   doi     = {10.1109/TCYB.2016.2640288}
 }
 
 @inproceedings{XuZhXiYu14,
-  author    = {Chuan Xu and
-               Guofeng Zhao and
-               Gaogang Xie and
-               Shui Yu},
-  title     = {Detection on application layer DDoS using random walk model},
-  booktitle = {{IEEE} International Conference on Communications, {ICC} 2014, Sydney,
-               Australia, June 10-14, 2014},
-  pages     = {707--712},
-  publisher = {{IEEE}},
-  year      = {2014},
-  url       = {https://doi.org/10.1109/ICC.2014.6883402},
-  doi       = {10.1109/ICC.2014.6883402}
+  title        = {Detection on application layer DDoS using random walk model},
+  author       = {Xu, Chuan and Zhao, Guofeng and Xie, Gaogang and Yu, Shui},
+  booktitle    = {2014 IEEE International Conference on Communications (ICC)},
+  pages        = {707--712},
+  year         = {2014},
+  organization = {IEEE}
 }
+
 @inproceedings{WaJiZhZh10,
-  author    = {Changhu Wang and
-               Feng Jing and
-               Lei Zhang and
-               HongJiang Zhang},
   title     = {Image annotation refinement using random walk with restarts},
-  booktitle = {Proceedings of the 14th {ACM} International Conference on Multimedia,
-               Santa Barbara, CA, USA, October 23-27, 2006},
+  author    = {Wang, Changhu and Jing, Feng and Zhang, Lei and Zhang, Hong-Jiang},
+  booktitle = {Proceedings of the 14th ACM international conference on Multimedia},
   pages     = {647--650},
-  publisher = {{ACM}},
-  year      = {2006},
-  url       = {https://doi.org/10.1145/1180639.1180774},
-  doi       = {10.1145/1180639.1180774}
+  year      = {2006}
 }
+
 @inproceedings{LiPeMaQiWeQi10,
-  author    = {Gu{-}Li Lin and
-               Hong Peng and
-               Qian{-}Li Ma and
-               Jia Wei and
-               Jiang{-}Wei Qin},
-  title     = {Improving diversity in Web search results re-ranking using absorbing
-               random walks},
-  booktitle = {International Conference on Machine Learning and Cybernetics, {ICMLC}
-               2010, Qingdao, China, July 11-14, 2010, Proceedings},
-  pages     = {2116--2421},
-  publisher = {{IEEE}},
-  year      = {2010},
-  url       = {https://doi.org/10.1109/ICMLC.2010.5580733},
-  doi       = {10.1109/ICMLC.2010.5580733}
+  title        = {Improving diversity in Web search results re-ranking using absorbing random walks},
+  author       = {Lin, Gu-Li and Peng, Hong and Ma, Qian-Li and Wei, Jia and Qin, Jiang-Wei},
+  booktitle    = {2010 International Conference on Machine Learning and Cybernetics},
+  volume       = {5},
+  pages        = {2116--2421},
+  year         = {2010},
+  organization = {IEEE}
 }
+
 @article{GoViHuRa10,
   author  = {Viswanath Gopalakrishnan and
              Yiqun Hu and
@@ -199,9 +151,9 @@
   number  = {12},
   pages   = {3232--3242},
   year    = {2010},
-  url     = {https://doi.org/10.1109/TIP.2010.2053940},
   doi     = {10.1109/TIP.2010.2053940}
 }
+
 @article{ZeCaZhGuXi10,
   author  = {Yingpei Zeng and
              Jiannong Cao and
@@ -215,36 +167,30 @@
   number  = {5},
   pages   = {677--691},
   year    = {2010},
-  url     = {https://doi.org/10.1109/JSAC.2010.100606},
   doi     = {10.1109/JSAC.2010.100606}
 }
 
 @article{BoRaZh11,
-  year    = {2011},
-  month   = {7},
-  title   = {{Commute times for a directed graph using an asymmetric Laplacian}},
-  author  = {Boley, Daniel and Ranjan, Gyan and Zhang, Zhi-Li},
-  journal = {Linear Algebra and its Applications},
-  issn    = {0024-3795},
-  doi     = {10.1016/j.laa.2011.01.030},
-  pages   = {224--242},
-  number  = {2},
-  volume  = {435}
+  title     = {Commute times for a directed graph using an asymmetric Laplacian},
+  author    = {Boley, Daniel and Ranjan, Gyan and Zhang, Zhi-Li},
+  journal   = {Linear Algebra and its Applications},
+  volume    = {435},
+  number    = {2},
+  pages     = {224--242},
+  year      = {2011},
+  publisher = {Elsevier}
 }
 
 
 @article{Hu14,
-  year    = {2014},
-  month   = {3},
-  title   = {{The Role of Kemeny's Constant in Properties of Markov Chains}},
-  author  = {Hunter, Jeffrey J.},
-  journal = {Communications in Statistics - Theory and Methods},
-  issn    = {0361-0926},
-  doi     = {10.1080/03610926.2012.741742},
-  eprint  = {1208.4716},
-  pages   = {1309--1321},
-  number  = {7},
-  volume  = {43}
+  title     = {{The role of Kemeny's constant in properties of Markov chains}},
+  author    = {Hunter, Jeffrey J},
+  journal   = {Commun. Stat. --- Theor. Methods},
+  volume    = {43},
+  number    = {7},
+  pages     = {1309--1321},
+  year      = {2014},
+  publisher = {Taylor \& Francis}
 }
 
 @article{Cv80,
@@ -253,72 +199,55 @@
   year   = {1980}
 }
 
-
 @inproceedings{MaMaGi15,
-  author    = {Charalampos Mavroforakis and
-               Michael Mathioudakis and
-               Aristides Gionis},
-  title     = {Absorbing Random-Walk Centrality: Theory and Algorithms},
-  booktitle = {2015 {IEEE} International Conference on Data Mining, {ICDM} 2015,
-               Atlantic City, NJ, USA, November 14-17, 2015},
-  pages     = {901--906},
-  publisher = {{IEEE} Computer Society},
-  year      = {2015},
-  url       = {https://doi.org/10.1109/ICDM.2015.103},
-  doi       = {10.1109/ICDM.2015.103}
+  title        = {Absorbing random-walk centrality: Theory and algorithms},
+  author       = {Mavroforakis, Charalampos and Mathioudakis, Michael and Gionis, Aristides},
+  booktitle    = {Proceedings of IEEE International Conference on Data Mining},
+  pages        = {901--906},
+  year         = {2015},
+  organization = {IEEE}
 }
+
 @article{RaZh13,
-  year     = {2013},
-  title    = {{Geometry of complex networks and topological centrality}},
-  author   = {Ranjan, Gyan and Zhang, Zhi-Li},
-  journal  = {Physica A: Statistical Mechanics and its Applications},
-  issn     = {0378-4371},
-  doi      = {10.1016/j.physa.2013.04.013},
-  pages    = {3833--3845},
-  number   = {17},
-  volume   = {392},
-  keywords = {}
+  title     = {Geometry of complex networks and topological centrality},
+  author    = {Ranjan, Gyan and Zhang, Zhi-Li},
+  journal   = {Physica A},
+  volume    = {392},
+  number    = {17},
+  pages     = {3833--3845},
+  year      = {2013},
+  publisher = {Elsevier}
 }
+
 @inproceedings{RoGl16,
-  author    = {Nir Rosenfeld and
-               Amir Globerson},
-  title     = {Optimal Tagging with Markov Chain Optimization},
-  booktitle = {Advances in Neural Information Processing Systems 29: Annual Conference
-               on Neural Information Processing Systems 2016, December 5-10, 2016,
-               Barcelona, Spain},
+  author    = {Rosenfeld, Nir and Globerson, Amir},
+  booktitle = {Advances in Neural Information Processing Systems},
+  editor    = {D. Lee and M. Sugiyama and U. Luxburg and I. Guyon and R. Garnett},
   pages     = {1307--1315},
-  year      = {2016},
-  url       = {https://proceedings.neurips.cc/paper/2016/hash/c8ed21db4f678f3b13b9d5ee16489088-Abstract.html}
+  publisher = {Curran Associates, Inc.},
+  title     = {Optimal Tagging with Markov Chain Optimization},
+  url       = {https://proceedings.neurips.cc/paper/2016/file/c8ed21db4f678f3b13b9d5ee16489088-Paper.pdf},
+  volume    = {29},
+  year      = {2016}
 }
+
 @inproceedings{GaLePaGoLiZh15,
-  author    = {Golshan Golnari and
-               Yanhua Li and
-               Zhi{-}Li Zhang},
-  title     = {Pivotality of Nodes in Reachability Problems Using Avoidance and Transit
-               Hitting Time Metrics},
-  booktitle = {Proceedings of the 24th International Conference on World Wide Web
-               Companion, {WWW} 2015, Florence, Italy, May 18-22, 2015 - Companion
-               Volume},
+  title     = {Pivotality of nodes in reachability problems using avoidance and transit hitting time metrics},
+  author    = {Golnari, Golshan and Li, Yanhua and Zhang, Zhi-Li},
+  booktitle = {Proceedings of the 24th International Conference on World Wide Web},
   pages     = {1073--1078},
-  publisher = {{ACM}},
-  year      = {2015},
-  url       = {https://doi.org/10.1145/2740908.2744713},
-  doi       = {10.1145/2740908.2744713}
+  year      = {2015}
 }
+
 @inproceedings{LiYuHuCh14,
-  author    = {Rong{-}Hua Li and
-               Jeffrey Xu Yu and
-               Xin Huang and
-               Hong Cheng},
-  title     = {Random-walk domination in large graphs},
-  booktitle = {{IEEE} 30th International Conference on Data Engineering, Chicago,
-               {ICDE} 2014, IL, USA, March 31 - April 4, 2014},
-  pages     = {736--747},
-  publisher = {{IEEE} Computer Society},
-  year      = {2014},
-  url       = {https://doi.org/10.1109/ICDE.2014.6816696},
-  doi       = {10.1109/ICDE.2014.6816696}
+  title        = {Random-walk domination in large graphs},
+  author       = {Li, Rong-Hua and Yu, Jeffrey Xu and Huang, Xin and Cheng, Hong},
+  booktitle    = {2014 IEEE 30th International Conference on Data Engineering},
+  pages        = {736--747},
+  year         = {2014},
+  organization = {IEEE}
 }
+
 @article{MoBaZhPe20,
   author  = {Songsong Mo and
              Zhifeng Bao and
@@ -330,74 +259,25 @@
   number  = {4},
   pages   = {560--572},
   year    = {2020},
-  url     = {http://www.vldb.org/pvldb/vol14/p560-mo.pdf},
   doi     = {10.14778/3436905.3436915}
 }
 
-
-@inproceedings{FaWaBoCaMa22,
-  author    = {Francesco Fabbri and
-               Yanhao Wang and
-               Francesco Bonchi and
-               Carlos Castillo and
-               Michael Mathioudakis},
-  title     = {Rewiring What-to-Watch-Next Recommendations to Reduce Radicalization
-               Pathways},
-  booktitle = {{WWW} '22: The {ACM} Web Conference 2022, Virtual Event, Lyon, France,
-               April 25 - 29, 2022},
-  pages     = {2719--2728},
-  publisher = {{ACM}},
-  year      = {2022},
-  url       = {https://doi.org/10.1145/3485447.3512143},
-  doi       = {10.1145/3485447.3512143}
-}
-
-
 @inproceedings{GiBaRa21,
-  author    = {Iqra Altaf Gillani and
-               Amitabha Bagchi and
-               Sayan Ranu},
-  title     = {A Group-to-Group Version of Random Walk Betweenness Centrality},
-  booktitle = {{CODS-COMAD} 2021: 8th {ACM} {IKDD} {CODS} and 26th COMAD, Virtual
-               Event, Bangalore, India, January 2-4, 2021},
+  title     = {A group-to-group version of random walk betweenness centrality},
+  author    = {Gillani, Iqra Altaf and Bagchi, Amitabha and Ranu, Sayan},
+  booktitle = {Proceedings of the 3rd ACM India Joint International Conference on Data Science \& Management of Data (8th ACM IKDD CODS \& 26th COMAD)},
   pages     = {127--135},
-  publisher = {{ACM}},
-  year      = {2021},
-  url       = {https://doi.org/10.1145/3430984.3431020},
-  doi       = {10.1145/3430984.3431020}
-}
-@inproceedings{WaRaSk19,
-  author    = {Tomasz Was and
-               Talal Rahwan and
-               Oskar Skibski},
-  title     = {Random Walk Decay Centrality},
-  booktitle = {The Thirty-Third {AAAI} Conference on Artificial Intelligence, {AAAI}
-               2019, The Thirty-First Innovative Applications of Artificial Intelligence
-               Conference, {IAAI} 2019, The Ninth {AAAI} Symposium on Educational
-               Advances in Artificial Intelligence, {EAAI} 2019, Honolulu, Hawaii,
-               USA, January 27 - February 1, 2019},
-  pages     = {2197--2204},
-  publisher = {{AAAI} Press},
-  year      = {2019},
-  url       = {https://doi.org/10.1609/aaai.v33i01.33012197},
-  doi       = {10.1609/aaai.v33i01.33012197}
+  year      = {2021}
 }
 
-@article{ZhLuWaGu17,
-  author     = {Junzhou Zhao and
-                John C. S. Lui and
-                Pinghui Wang and
-                Xiaohong Guan},
-  title      = {Towards Efficient Node Discoverability Optimization on Large Networks},
-  journal    = {CoRR},
-  volume     = {abs/1703.04307},
-  year       = {2017},
-  url        = {http://arxiv.org/abs/1703.04307},
-  eprinttype = {arXiv},
-  eprint     = {1703.04307},
-  timestamp  = {Mon, 13 Aug 2018 16:46:09 +0200},
-  biburl     = {https://dblp.org/rec/journals/corr/ZhaoLWG17.bib},
-  bibsource  = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{WaRaSk19,
+  title     = {Random walk decay centrality},
+  author    = {Was, Tomasz and Rahwan, Talal and Skibski, Oskar},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume    = {33},
+  number    = {01},
+  pages     = {2197--2204},
+  year      = {2019}
 }
 
 @article{GaKySp23,
@@ -502,7 +382,7 @@
 @inproceedings{ChLiTa08,
   title        = {Clustering via Random Walk Hitting Time on Directed Graphs},
   author       = {Chen, M. and Liu, J.  Z. and Tang, X.},
-  booktitle    = {Proceedings of the Twenty-Third AAAI Conference on Artificial Intelligence},
+  booktitle    = {Proc. AAAI Conf. Artificial Intelligence},
   pages        = {616--621},
   year         = {2008},
   organization = {AAAI}
@@ -537,7 +417,7 @@
 @article{FoPiReSa07,
   title     = {Random-walk computation of similarities between nodes of a graph with application to collaborative recommendation},
   author    = {Fouss, Francois and Pirotte, Alain and Renders, J-M and Saerens, Marco},
-  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  journal   = {IEEE Trans. Knowl. Data Eng.},
   volume    = {19},
   number    = {3},
   pages     = {355--369},
@@ -548,7 +428,7 @@
 @article{GhBoSa08,
   title     = {Minimizing effective resistance of a graph},
   author    = {Ghosh, Arpita and Boyd, Stephen and Saberi, Amin},
-  journal   = {SIAM Review},
+  journal   = {SIAM Rev.},
   volume    = {50},
   number    = {1},
   pages     = {37--66},
@@ -559,7 +439,7 @@
 @article{Le06,
   title     = {Random walks for image segmentation},
   author    = {Grady, Leo},
-  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  journal   = {IEEE Trans. Pattern Analysis and Machine Intelligence},
   volume    = {28},
   number    = {11},
   pages     = {1768--1783},
@@ -570,7 +450,7 @@
 @article{Hu06,
   title     = {{Mixing times with applications to perturbed Markov chains}},
   author    = {Hunter, Jeffrey J},
-  journal   = {Linear Algebra and its Applications},
+  journal   = {Linear Algebra Appl.},
   volume    = {417},
   number    = {1},
   pages     = {108--123},
@@ -578,19 +458,21 @@
   publisher = {Elsevier}
 }
 
-@article{JaOl15,
-  title   = {Scaling Laws for Consensus Protocols Subject to Noise},
-  author  = {Ali Jadbabaie and Alexander Olshevsky},
-  journal = {IEEE Transactions on Automatic Control},
-  year    = {2015},
-  volume  = {64},
-  pages   = {1389-1402}
+@article{JaOl19,
+  title     = {{Scaling Laws for Consensus Protocols Subject to Noise}},
+  author    = {Jadbabaie, Ali and Olshevsky, Alex},
+  journal   = {{IEEE} Trans. Autom. Control.},
+  volume    = {64},
+  number    = {4},
+  pages     = {1389--1402},
+  year      = {2019},
+  publisher = {IEEE}
 }
 
 @article{KlRa93,
   title     = {Resistance distance},
   author    = {Klein, Douglas J and Randi{\'c}, Milan},
-  journal   = {Journal of Mathematical Chemistry},
+  journal   = {J. Math. Chem.},
   volume    = {12},
   number    = {1},
   pages     = {81--95},
@@ -610,7 +492,7 @@
 @inproceedings{KySa16,
   title        = {Approximate {G}aussian elimination for {L}aplacians-fast, sparse, and simple},
   author       = {Kyng, Rasmus and Sachdeva, Sushant},
-  booktitle    = {Proceedings of the IEEE 57th Annual Symposium on Foundations of Computer Science},
+  booktitle    = {Proc. IEEE 57th Ann. Symp. Found.  Comput. Sci.},
   pages        = {573--582},
   year         = {2016},
   organization = {IEEE}
@@ -619,7 +501,7 @@
 @article{LaDeBa14,
   title     = {Random walks, Markov processes and the multiscale modular organization of complex networks},
   author    = {Lambiotte, Renaud and Delvenne, Jean-Charles and Barahona, Mauricio},
-  journal   = {IEEE Transactions on Network Science and Engineering},
+  journal   = {IEEE Transs Netw. Sci. Eng.},
   volume    = {1},
   number    = {2},
   pages     = {76--90},
@@ -727,7 +609,7 @@
 @article{PaAgBu15,
   title     = {{Robotic surveillance and Markov chains with minimal weighted Kemeny constant}},
   author    = {Patel, Rushabh and Agharkar, Pushkarini and Bullo, Francesco},
-  journal   = {IEEE Transatcions on Automatic Control},
+  journal   = {IEEE Trans. Autom. Control},
   volume    = {60},
   number    = {12},
   pages     = {3156--3167},
@@ -738,7 +620,7 @@
 @article{SaDi12,
   title     = {The impact of mobility on gossip algorithms},
   author    = {Sarwate, Anand Dilip and Dimakis, Alexandros G},
-  journal   = {IEEE Transactoins on  Information Theory},
+  journal   = {IEEE Trans. Inform. Theory},
   volume    = {58},
   number    = {3},
   pages     = {1731--1742},
@@ -767,7 +649,7 @@
 @article{TeBeVo09,
   title     = {Global mean first-passage times of random walks on complex networks},
   author    = {Tejedor, V and B{\'e}nichou, O and Voituriez, R},
-  journal   = {Physical Review E},
+  journal   = {Phys. Rev. E},
   volume    = {80},
   number    = {6},
   pages     = {065104},
@@ -792,7 +674,8 @@
   booktitle = {Proceedings of the ninth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   pages     = {266--275},
   year      = {2003}
-}
+}%   author={White, Scott and Smyth, Padhraic},, organization={ACM},={Proceedings of the ninth ACM SIGKDD international conference on Knowledge discovery and data mining},{Proc. ACM SIGKDD Int'l Conf. Knowledge Discovery and Data Mining},
+%{Proc. ACM SIGKDD Int'l Conf. Knowledge Discovery and Data Mining},{Proc.  Int. Conf. Knowledge Discovery and Data Mining},
 
 @article{WuZhCh11,
   title     = {Random walks on dual {S}ierpi\'{n}ski gaskets},
@@ -835,13 +718,17 @@
   year    = {2008}
 }
 
-@article{RaChVe13,
+@article{RaChVe14,
+  author  = {Juri Ranieri and
+             Amina Chebira and
+             Martin Vetterli},
   title   = {Near-Optimal Sensor Placement for Linear Inverse Problems},
-  author  = {Juri Ranieri and Amina Chebira and Martin Vetterli},
-  journal = {IEEE Transactions on Signal Processing},
-  year    = {2013},
+  journal = {{IEEE} Trans. Signal Process.},
   volume  = {62},
-  pages   = {1135-1146}
+  number  = {5},
+  pages   = {1135--1146},
+  year    = {2014},
+  doi     = {10.1109/TSP.2014.2299518}
 }
 
 @article{DiChWaBa20,
@@ -853,12 +740,14 @@
 }
 
 @article{ChTiFeVeKo17,
-  title   = {Fast Resampling of Three-Dimensional Point Clouds via Graphs},
-  author  = {Siheng Chen and Dong Tian and Chen Feng and Anthony Vetro and Jelena Kovacevic},
-  journal = {IEEE Transactions on Signal Processing},
-  year    = {2017},
-  volume  = {66},
-  pages   = {666-681}
+  title     = {Fast resampling of three-dimensional point clouds via graphs},
+  author    = {Chen, Siheng and Tian, Dong and Feng, Chen and Vetro, Anthony and Kova{\v{c}}evi{\'c}, Jelena},
+  journal   = {{IEEE} Trans. Signal Process.},
+  volume    = {66},
+  number    = {3},
+  pages     = {666--681},
+  year      = {2017},
+  publisher = {IEEE}
 }
 
 @article{CaCh97,
@@ -897,7 +786,7 @@
 @article{GuHa91,
   title     = {Embedding complete binary trees into butterfly networks},
   author    = {Gupta, Ajay K. and Hambrusch, Susanne E.},
-  journal   = {IEEE Transactions on Computers},
+  journal   = {IEEE Trans. Comput.},
   volume    = {40},
   number    = {7},
   pages     = {853--863},
@@ -908,7 +797,7 @@
 @article{LiFaJi16,
   title     = {{Complete binary trees embeddings in M{\"o}bius cubes}},
   author    = {Liu, Zhao and Fan, Jianxi and Jia, Xiaohua},
-  journal   = {Journal of Computer and System Sciences},
+  journal   = {J. Comput. Syst. Sci.},
   volume    = {82},
   number    = {2},
   pages     = {260--281},
@@ -919,7 +808,7 @@
 @article{JuWuZh13,
   title     = {{Eigenvalues of normalized Laplacian matrices of fractal trees and dendrimers: Analytical results and applications}},
   author    = {Julaiti, Alafate and Wu, Bin and Zhang, Zhongzhi},
-  journal   = {Journal of Chemical Physics},
+  journal   = {J. Chem. Phys.},
   volume    = {138},
   number    = {20},
   pages     = {204116},
